Made the future bar scene

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -4,42 +4,55 @@
 <!-- HEADER -->
 <head>
 
-<title>The Present</title>
+<title></title>
 
 <script type="bitsyGameData" id="exportedGameData">
-The Present
+
 
 # BITSY VERSION 4.6
 
 ! ROOM_FORMAT 1
 
 PAL 0
-0,82,204
-128,159,255
+NAME Beginning
+0,0,0
+255,255,255
+255,255,0
+
+PAL 1
+NAME History
+0,0,0
+255,255,255
 255,255,255
 
+PAL 2
+NAME Future
+221,221,221
+0,221,221
+240,240,0
+
 ROOM 0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,a,a,a,a,a,a,a,a,a,a,0,0,0
-0,0,0,a,0,0,0,0,0,0,0,0,a,0,0,0
-0,0,0,a,0,0,0,0,0,0,0,0,a,0,0,0
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
+a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
 a,a,a,a,0,0,0,0,0,0,0,0,0,a,a,a
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 a,a,a,0,0,0,0,0,0,0,0,0,a,a,a,a
-0,0,0,a,0,0,0,0,0,0,0,0,a,0,0,0
-0,0,0,a,0,0,0,0,0,0,0,0,a,0,0,0
-0,0,0,a,a,a,a,0,0,0,a,a,a,0,0,0
-0,0,0,0,0,0,a,0,0,a,0,0,0,0,0,0
-0,0,0,0,0,0,a,0,0,a,0,0,0,0,0,0
-0,0,0,0,0,0,a,0,0,a,0,0,0,0,0,0
+a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
+a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
+a,a,a,a,a,a,a,0,0,0,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
 NAME Beginning
 EXT 0,7 1 6,6
 EXT 0,8 1 6,6
-EXT 15,7 2 6,6
-EXT 15,8 2 6,6
+EXT 15,7 2 1,12
+EXT 15,8 2 1,12
 EXT 7,15 3 6,6
 EXT 8,15 3 6,6
 PAL 0
@@ -65,24 +78,34 @@ NAME Past Start
 PAL 0
 
 ROOM 2
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,0,0,0,0,b,0,0,0,0,0,b,0,0,0,b
+b,0,0,0,0,b,b,b,b,b,b,b,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 NAME Future Start
-PAL 0
+ITM 0 6,3
+ITM 0 7,3
+ITM 0 8,3
+ITM 0 9,3
+ITM 0 10,3
+ITM 1 8,1
+ITM 2 8,12
+ITM 2 13,8
+EXT 15,3 0 7,5
+EXT 15,4 0 0,0
+PAL 2
 
 ROOM 3
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -122,7 +145,19 @@ TIL a
 01010101
 10101010
 01010101
+NAME shifting wall
 WAL false
+
+TIL b
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+11111111
+NAME wall
 
 SPR A
 00011000
@@ -153,6 +188,7 @@ SPR a
 01111110
 00011000
 00011000
+NAME Present Sign
 DLG SPR_0
 POS 0 9,12
 
@@ -165,6 +201,7 @@ SPR b
 01111110
 00011000
 00011000
+NAME History Sign
 DLG SPR_2
 POS 0 3,9
 
@@ -177,23 +214,134 @@ SPR c
 01111110
 00011000
 00011000
+NAME Future Sign
 DLG SPR_1
 POS 0 12,6
 
-ITM 0
-00000000
-00000000
-00000000
+SPR f
 00111100
-01100100
-00100100
-00011000
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+NAME Vert Table Middle
+POS 2 2,12
+
+SPR g
 00000000
-NAME tea
+00011000
+00011000
+00011000
+00111100
+01011010
+00100100
+00100100
+NAME A
+DLG SPR_3
+POS 2 3,12
+
+SPR h
+00000000
+00011000
+00011000
+00111100
+01011010
+00011000
+00100100
+00100100
+NAME B
+DLG SPR_4
+POS 2 3,1
+
+SPR i
+00110000
+00111000
+01111111
+11011111
+11111111
+01111010
+00011110
+00111100
+NAME Puke
+DLG SPR_5
+POS 2 3,2
+
+SPR j
+00111100
+00111100
+01011010
+00011000
+00111100
+01111110
+00100100
+00100100
+NAME Girl
+DLG SPR_7
+POS 2 4,8
+
+SPR k
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+NAME Vert Table2
+POS 2 5,8
+
+SPR l
+00111100
+00111100
+01011010
+00011000
+00111100
+01111110
+00100100
+00100100
+NAME Girl 2
+DLG SPR_6
+POS 2 6,8
+
+ITM 0
+00011000
+00011000
+00011000
+00111100
+00111100
+00100100
+00111100
+00111100
+NAME Booze
 DLG ITM_0
 
-DLG ITM_0
-You found a nice warm cup of tea.
+ITM 1
+00011000
+00111100
+00111100
+00011000
+00111100
+01011010
+00011000
+00100100
+NAME Calefare
+DLG ITM_1
+
+ITM 2
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+00111100
+NAME Knockable Table
+DLG ITM_2
 
 DLG SPR_1
 "Tomorrow is a mystery."
@@ -203,6 +351,45 @@ DLG SPR_2
 
 DLG SPR_0
 "Today is a gift. That is why it is called The Present."
+
+DLG ITM_0
+{wvy}Maybe you shouldn't drink so much...{wvy}
+
+DLG SPR_3
+"""
+A: {
+  - {item "Booze"} == 0 ?
+    R, let's grab a drink, just don't over do it.
+  - {item "0"} == 1 ?
+    Are you drunk already?
+  - {item "Booze"} == 2 ?
+    R, slow down. Have some warm water.
+  - {item "Booze"} == 3 ?
+    Just please don't go over and talk to those girls.
+  - {item "Booze"} == 4 ?
+    You're becoming a bigger problem than B, at least he's just sitting there.
+  - {item "Booze"} == 5 ?
+    THAT'S ENOUGH! I'M TAKING YOU AND B HOME RIGHT NOW!
+}
+"""
+
+DLG SPR_4
+B: {shk}I don't feel so good{shk}
+
+DLG ITM_1
+If you see this, it's a bug.
+
+DLG SPR_5
+Probably best to not step in B's {rbw}vomit{rbw}.
+
+DLG SPR_6
+Go out with you? HAHAHAHAHAHA!
+
+DLG SPR_7
+Oh, no, sorry. I have a boyfriend
+
+DLG ITM_2
+You knocked over a table.
 
 VAR a
 42
