--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -87,7 +87,14 @@ b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,b,0,0,b,b,b,b,b,b,b,b,b,b,b
 b,b,b,0,0,b,b,b,b,b,b,b,b,b,b,b
 NAME Past Start
-EXT 0,3 0 0,0
+EXT 0,3 4 10,9
+EXT 0,4 4 10,9
+EXT 3,15 4 10,9
+EXT 4,15 4 10,9
+EXT 15,11 4 10,9
+EXT 15,12 4 10,9
+EXT 15,3 4 10,9
+EXT 15,4 4 10,9
 PAL 1
 
 ROOM 2
@@ -140,8 +147,8 @@ PAL 3
 ROOM 4
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,0,0,e,j,j,j,j,j,j,j,j,j,k,0,b
-b,0,0,f,0,0,o,q,0,s,u,0,0,l,0,b
-b,0,0,0,g,0,p,r,0,t,v,0,m,0,0,b
+b,0,0,f,0,0,0,s,u,0,0,0,0,l,0,b
+b,0,0,0,g,0,0,t,v,0,0,0,m,0,0,b
 b,0,0,0,f,0,y,z,10,11,0,0,l,0,0,b
 b,0,0,0,0,h,i,i,i,i,i,n,0,0,0,b
 b,x,x,x,x,x,x,x,x,x,x,x,x,x,x,b
@@ -155,6 +162,26 @@ b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
 b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
 b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
 NAME History 1 - Development
+PAL 4
+
+ROOM 5
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,16,17,0,16,17,0,a,a,a,a,a,a,a,a,a
+a,15,15,15,15,15,15,a,a,a,0,0,0,a,a,a
+a,14,14,14,14,14,14,a,a,a,0,18,19,a,a,a
+a,0,16,17,0,16,17,a,a,a,0,0,0,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,13,13,13,13,13,13,a,a,a,a,a,a,a,a,a
+a,b,b,b,b,12,b,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
+a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+NAME History 2 - Crisis
 PAL 4
 
 TIL 10
@@ -178,6 +205,94 @@ TIL 11
 11100111
 11000011
 NAME imaX
+
+TIL 12
+11111111
+10100101
+11111111
+10100101
+11111111
+10100101
+11111111
+10100101
+NAME Gate
+WAL true
+
+TIL 13
+00000000
+00000000
+11111111
+11111111
+11111111
+11111111
+11111111
+00000000
+NAME Walking Path
+
+TIL 14
+11111111
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+NAME Road 0
+
+TIL 15
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+11111111
+NAME Road 1
+
+TIL 16
+00000000
+00000000
+00000000
+00000111
+00000111
+00000000
+00000000
+00000000
+NAME Road 2
+
+TIL 17
+00000000
+00000000
+00000000
+11100000
+11100000
+00000000
+00000000
+00000000
+
+TIL 18
+00000000
+00111100
+01011010
+00011000
+01111110
+00011000
+00111100
+00100100
+NAME Crisis C
+
+TIL 19
+00000100
+00000100
+00111100
+00100100
+00100100
+00111100
+00111100
+00111100
+NAME Crisis C Phone
 
 TIL a
 01010101
@@ -347,93 +462,49 @@ TIL n
 11111000
 NAME Cinema Screen Right Bottom
 
-TIL o
-11111111
-11111111
-11000000
-11000000
-11000000
-11000000
-11000000
-11000000
-NAME D00
-
-TIL p
-11000000
-11000000
-11000000
-11000000
-11000000
-11000000
-11111111
-11111111
-NAME D10
-
-TIL q
-11110000
-11111000
-00011100
-00001100
-00000110
-00000110
-00000011
-00000011
-NAME D01
-
-TIL r
-00000011
-00000011
-00000110
-00000110
-00001100
-00011100
-11111000
-11110000
-NAME D11
-
 TIL s
-11111111
-11111111
-11000000
-11000000
-11000000
-11000000
-11000000
-11111111
-NAME P00
+00011111
+00111111
+01110001
+11100001
+11000001
+11000001
+11001001
+11011101
+NAME DP00
 
 TIL t
-11111111
-11000000
-11000000
-11000000
-11000000
-11000000
-11000000
-11000000
-NAME P10
+11001101
+11000001
+11000001
+11000001
+11100001
+01110001
+00111111
+00011111
+NAME DP10
 
 TIL u
-11110000
-11110000
-00011000
-00011000
-00011000
-00011000
-00011000
-11110000
-NAME P01
+11111000
+11111100
+10001110
+10000111
+10000011
+10000011
+10010011
+10111011
+NAME DP01
 
 TIL v
-11110000
-00000000
-00000000
-00000000
-00000000
-00000000
-00000000
-00000000
-NAME P11
+10110011
+10000011
+10000011
+10000011
+10000111
+10001110
+11111100
+11111000
+NAME DP11
 
 TIL w
 00000000
@@ -630,6 +701,18 @@ NAME Development C
 DLG SPR_9
 POS 4 11,9
 
+SPR q
+00000100
+00000100
+00111100
+00100100
+00100100
+00111100
+00111100
+00111100
+NAME Crisis Phone
+POS 5 4,13
+
 ITM 0
 00011000
 00011000
@@ -702,6 +785,7 @@ C: {sequence
   - What are you doing here in this faculty?
   - No way! I've been thinking about transferring!
   - My name is C! Nice to meet you!
+  - Grab lunch? Sure!
 }
 """
 
@@ -735,7 +819,9 @@ DLG SPR_9
   - C: Are you a romantic, R? Really? Me too!
 
   - C: Do you have a type? Oooooh.
-  - C: Me? I like a guy who can make me a better person.
+  - C: Me? I like a guy who makes me a better person.
+  - C: Look at those couples, R. {wvy}Holding hands being mushy~{wvy}
+  - C: Movie's over, let's go.
 }
 """
 
