Updated bar scene.

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -889,11 +889,15 @@ DLG SPR_a
 C: {sequence
   - R, can I tell you something?
   - But you have to promise me something first!
-  - Promise you won't get upset or judge me
+  - Promise you won't get upset or judge me.
   - Okay, so...
-  - I had a one night stand.
-  - 
-  - 
+  - I was out clubbing last night and...
+  - I hooked up with this guy...
+  - Really? It doesn't bother you?
+  - Because I would completely understand...
+  - {shk}If you didn't want to be friends anymore.{shk}
+  - Really? Thank you, R.
+  - Yup, see you Tuesday. Bye.
 }
 """
 
@@ -913,7 +917,7 @@ body {
 	margin:0px;
 	padding:0px;
 	overflow:hidden;
-	background:#ffffff;
+	background:#000000;
 }
 
 #game {
