Christmas and Restaurant rooms half done

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -184,6 +184,62 @@ a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
 a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 NAME History 2 - Crisis
+EXT 1,15 7 12,2
+PAL 4
+
+ROOM 6
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,1j,1k,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,1n,1m,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,1l,1o,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,1p,1q,0,0,0,0,0,0,0,b,b,b,b,b
+b,b,0,0,0,0,0,0,0,0,0,12,1h,b,b,b
+b,b,0,0,0,0,0,0,0,1b,1c,b,1g,b,b,b
+b,b,0,0,0,0,0,0,0,1d,1e,b,1g,b,b,b
+b,b,b,b,b,b,b,b,b,1a,1a,b,1g,b,b,b
+b,b,13,13,13,13,13,13,13,1b,1c,13,1f,13,b,b
+b,b,15,15,15,15,15,15,15,1d,1e,15,15,15,b,b
+b,b,14,14,14,14,14,14,14,14,14,14,14,14,b,b
+b,b,0,16,17,0,16,17,0,16,17,0,16,17,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+NAME History 4 - Christmas
+ITM 1 12,2
+PAL 4
+
+ROOM 7
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
+b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,bb
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
+b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
+b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+NAME History 3 - Restaurant
+ITM 2 5,2
+ITM 2 10,2
+EXT 2,9 6 6,2
+EXT 3,9 6 6,2
+EXT 4,9 6 6,2
+EXT 5,9 6 6,2
+EXT 6,9 6 6,2
+EXT 7,9 6 6,2
+EXT 8,9 6 6,2
+EXT 9,9 6 6,2
+EXT 10,9 6 6,2
+EXT 11,9 6 6,2
+EXT 12,9 6 6,2
+EXT 13,9 6 6,2
 PAL 4
 
 TIL 10
@@ -576,6 +632,7 @@ TIL 1b
 00111000
 00111000
 NAME Car Top Left
+WAL true
 
 TIL 1c
 00000000
@@ -587,6 +644,7 @@ TIL 1c
 00011100
 00011100
 NAME Car Top Right
+WAL true
 
 TIL 1d
 00111111
@@ -598,6 +656,7 @@ TIL 1d
 00001111
 00000000
 NAME Car Bottom Left
+WAL true
 
 TIL 1e
 11111100
@@ -609,6 +668,148 @@ TIL 1e
 11110000
 00000000
 NAME Car Bottom Right
+WAL true
+
+TIL 1f
+01111100
+01111100
+11111111
+11111111
+11111111
+11111111
+11111111
+00000000
+NAME Walking Path 2
+
+TIL 1g
+01111100
+01111100
+01111100
+01111100
+01111100
+01111100
+01111100
+01111100
+NAME Walking Path 3
+
+TIL 1h
+01111100
+11111100
+11111100
+11111100
+11111100
+11111100
+11111100
+01111100
+NAME Walking Path 4
+
+TIL 1i
+11111111
+10100101
+11111111
+10100101
+11111111
+10100101
+11111111
+10100101
+NAME Side Gate Passable
+WAL false
+
+TIL 1j
+11111111
+10000000
+10000000
+10000000
+10000000
+10000000
+10000101
+10000010
+NAME Pool Top Left
+WAL true
+
+TIL 1k
+11111111
+00000001
+00000001
+00000001
+00000001
+00000001
+01000001
+10000001
+NAME Pool Top Right
+WAL true
+
+TIL 1l
+10000000
+10000000
+10000000
+10000001
+10000000
+10000000
+10010101
+10001010
+NAME Pool Left
+WAL true
+
+TIL 1m
+00000001
+00000001
+00000001
+00000001
+00000001
+00000001
+01010101
+00101001
+NAME Pool Right
+WAL true
+
+TIL 1n
+10000000
+10000000
+10101010
+10010100
+10000000
+10000000
+10000000
+10000000
+NAME Pool Left 2
+WAL true
+
+TIL 1o
+00000001
+00000001
+00000001
+01010001
+10100001
+00000001
+00000001
+00000001
+NAME Pool Right 2
+WAL true
+
+TIL 1p
+10000000
+10000000
+10000000
+10000000
+10000010
+10000001
+10000000
+11111111
+NAME Pool Bottom Left
+WAL true
+
+TIL 1q
+00000001
+00000001
+00000001
+00000001
+10100001
+01000001
+00000001
+11111111
+NAME Pool Bottom Right
+WAL true
 
 SPR A
 00011000
@@ -773,6 +974,31 @@ NAME Crisis Phone
 DLG SPR_a
 POS 5 4,13
 
+SPR r
+00000000
+00101000
+01001011
+01111110
+01111110
+01001011
+00101000
+00000000
+NAME Christmas C
+DLG SPR_b
+POS 6 7,2
+
+SPR s
+00000000
+00111100
+01011010
+00011000
+01111110
+00011000
+00111100
+00100100
+NAME Bar C
+POS 7 13,2
+
 ITM 0
 00011000
 00011000
@@ -784,6 +1010,30 @@ ITM 0
 00111100
 NAME Booze
 DLG ITM_0
+
+ITM 1
+00000000
+01000010
+01111110
+01010010
+01000010
+01001010
+01000010
+01111110
+NAME Whiskey
+DLG ITM_1
+
+ITM 2
+00011000
+00011000
+00011000
+00111100
+00111100
+00100100
+00111100
+00111100
+NAME Beer
+DLG ITM_2
 
 DLG SPR_1
 "Tomorrow is a mystery."
@@ -893,6 +1143,12 @@ C: {sequence
   - Okay, so...
   - I was out clubbing last night and...
   - I hooked up with this guy...
+  - And when I told my mum she got angry...
+  - So I couldn't tell her the most important part...
+  - The guy he...
+  - He removed the rubber halfway...
+  - And I'm scared he gave me something...
+  - {shk}And I just need someone to talk to, R.{shk}
   - Really? It doesn't bother you?
   - Because I would completely understand...
   - {shk}If you didn't want to be friends anymore.{shk}
@@ -900,6 +1156,23 @@ C: {sequence
   - Yup, see you Tuesday. Bye.
 }
 """
+
+DLG ITM_1
+R took a shot of whiskey.
+
+DLG SPR_b
+"""
+{sequence
+  - C: Hey R. You're my best friend.
+  - C: But you know L?
+  - C: L and I are more than friends.
+  - C: Like... Friends++.
+  - C is passed out drunk.
+}
+"""
+
+DLG ITM_2
+R found some beer!
 
 VAR a
 42
