--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -206,6 +206,8 @@ b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 NAME History 4 - Christmas
 ITM 1 12,2
+ITM 1 4,2
+ITM 1 8,2
 PAL 4
 
 ROOM 7
@@ -213,33 +215,33 @@ b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
-b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,bb
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,0
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+13,13,13,13,13,13,13,13,13,13,13,13,13,13,13,13
+14,14,14,14,14,14,14,14,14,14,14,14,14,14,14,14
+16,17,0,16,17,0,16,17,0,16,17,0,16,17,0,16
+15,15,15,15,15,15,15,15,15,15,15,15,15,15,15,15
+14,14,14,14,14,14,14,14,14,14,14,14,14,14,14,14
+17,0,16,17,0,16,17,0,16,17,0,16,17,0,16,17
 NAME History 3 - Restaurant
 ITM 2 5,2
 ITM 2 10,2
-EXT 2,9 6 6,2
-EXT 3,9 6 6,2
-EXT 4,9 6 6,2
-EXT 5,9 6 6,2
-EXT 6,9 6 6,2
-EXT 7,9 6 6,2
-EXT 8,9 6 6,2
-EXT 9,9 6 6,2
-EXT 10,9 6 6,2
-EXT 11,9 6 6,2
-EXT 12,9 6 6,2
-EXT 13,9 6 6,2
+EXT 2,10 6 6,2
+EXT 3,10 6 6,2
+EXT 4,10 6 6,2
+EXT 5,10 6 6,2
+EXT 6,10 6 6,2
+EXT 7,10 6 6,2
+EXT 8,10 6 6,2
+EXT 9,10 6 6,2
+EXT 10,10 6 6,2
+EXT 11,10 6 6,2
+EXT 12,10 6 6,2
+EXT 13,10 6 6,2
 PAL 4
 
 TIL 10
@@ -999,6 +1001,19 @@ SPR s
 NAME Bar C
 POS 7 13,2
 
+SPR t
+00011000
+00011000
+00011000
+00111100
+01011010
+10011001
+00100100
+00100100
+NAME L
+DLG SPR_c
+POS 6 9,4
+
 ITM 0
 00011000
 00011000
@@ -1158,7 +1173,17 @@ C: {sequence
 """
 
 DLG ITM_1
+"""
 R took a shot of whiskey.
+{
+  - {item "Whiskey"} == 1 ?
+    He feels high.
+  - {item "Whiskey"} == 2 ?
+    He feels sad.
+  - {item "Whiskey"} == 3 ?
+    He feels angry.
+}
+"""
 
 DLG SPR_b
 """
@@ -1173,6 +1198,16 @@ DLG SPR_b
 
 DLG ITM_2
 R found some beer!
+
+DLG SPR_c
+"""
+{
+  - {item "Whiskey"} == 1 ?
+
+  - else ?
+
+}
+"""
 
 VAR a
 42
