--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -194,7 +194,7 @@ b,b,1j,1k,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,1n,1m,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,1l,1o,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,1p,1q,0,0,0,0,0,0,0,b,b,b,b,b
-b,b,0,0,0,0,0,0,0,0,0,12,1h,b,b,b
+b,b,0,0,0,0,0,0,0,0,0,1i,1h,b,b,b
 b,b,0,0,0,0,0,0,0,1b,1c,b,1g,b,b,b
 b,b,0,0,0,0,0,0,0,1d,1e,b,1g,b,b,b
 b,b,b,b,b,b,b,b,b,1a,1a,b,1g,b,b,b
@@ -208,6 +208,7 @@ NAME History 4 - Christmas
 ITM 1 12,2
 ITM 1 4,2
 ITM 1 8,2
+EXT 11,6 0 7,7
 PAL 4
 
 ROOM 7
@@ -215,7 +216,7 @@ b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
-b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,0
+b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
 b,b,c,c,c,0,0,c,c,c,0,0,c,c,b,b
 b,b,d,d,d,0,0,d,d,d,0,0,0,0,b,b
@@ -230,6 +231,8 @@ b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 NAME History 3 - Restaurant
 ITM 2 5,2
 ITM 2 10,2
+ITM 2 13,5
+ITM 2 13,4
 EXT 2,10 6 6,2
 EXT 3,10 6 6,2
 EXT 4,10 6 6,2
@@ -831,7 +834,7 @@ SPR A
 00111100
 00100100
 00000100
-POS 0 7,7
+POS 6 6,4
 
 SPR a
 00011000
@@ -998,7 +1001,8 @@ SPR s
 00011000
 00111100
 00100100
-NAME Bar C
+NAME Restaurant C
+DLG SPR_d
 POS 7 13,2
 
 SPR t
@@ -1013,6 +1017,28 @@ SPR t
 NAME L
 DLG SPR_c
 POS 6 9,4
+
+SPR u
+00001000
+00010000
+00011000
+00101010
+10011101
+00111000
+00101100
+00100100
+>
+00011000
+00001000
+00011000
+01010100
+10110101
+00101100
+00010000
+00100100
+NAME R?
+DLG SPR_e
+POS 6 5,2
 
 ITM 0
 00011000
@@ -1191,26 +1217,71 @@ DLG SPR_b
   - C: Hey R. You're my best friend.
   - C: But you know L?
   - C: L and I are more than friends.
-  - C: Like... Friends++.
+  - C: Like... Friends++. {H4 = 1}
   - C is passed out drunk.
 }
 """
 
 DLG ITM_2
-R found some beer!
+"""
+{
+  - {item "Beer"} == 1 ?
+    R drank some beer! It numbs the pain a little...
+  - {item "Beer"} == 2 ?
+    R has enough liquid courage to confess!
+  - {item "Beer"} == 3 ?
+    R can probably bear the rejection now.
+  - {item "Booze"} == 4 ?
+    Maybe R should walk home.
+}
+"""
 
 DLG SPR_c
 """
 {
   - {item "Whiskey"} == 1 ?
-
+    L: Hey man, are you drunk already?
+  - {item "Whiskey"} == 2 ?
+    L: What? Why do you want to die?
+  - {item "Whiskey"} == 3 ?
+    L: Hey, take it easy. I think you should go home.
+    L: I called you a cab.
+    
+    L: You can leave through the side gate.
   - else ?
-
+    L: You want a cig?
 }
 """
 
-VAR a
-42
+DLG SPR_d
+"""
+C: {
+  - {item "Beer"} == 1 ?
+    I've told you my secret, tell me one of yours!
+  - {item "Beer"} == 2 ?
+    Oh, R, I didn't know... Thank you, but...
+  - {item "Beer"} == 3 ?
+    With all that's going on right now, I can't say yes.
+  - {item "Beer"} == 4 ?
+    We can still be friends, but if you need time...
+    C: How about we just go home for now?
+  - else ?
+    Yeah, R, that's about all that happened.
+}
+"""
+
+DLG SPR_e
+"""
+{
+  - H4 == 1 ?
+    R: I thought I was your best friend...
+  - else ?
+    R: I'm... breaking...
+}
+"""
+
+VAR H4
+0
 
 
 </script>
