--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -4,10 +4,10 @@
 <!-- HEADER -->
 <head>
 
-<title></title>
+<title>The Present</title>
 
 <script type="bitsyGameData" id="exportedGameData">
-
+The Present
 
 # BITSY VERSION 4.6
 
@@ -15,15 +15,15 @@
 
 PAL 0
 NAME Beginning
-0,0,0
+68,68,68
 255,255,255
 255,255,0
 
 PAL 1
 NAME History 0
 68,68,68
-187,187,187
 136,136,136
+187,187,187
 
 PAL 2
 NAME Future 0
@@ -38,10 +38,28 @@ NAME Now 0
 255,255,255
 
 PAL 4
-NAME Development
+NAME History 1
+51,51,51
+153,153,153
+204,204,204
+
+PAL 5
+NAME History 2
+34,34,34
+170,170,170
+221,221,221
+
+PAL 6
+NAME History 3
+17,17,17
+187,187,187
+238,238,238
+
+PAL 7
+NAME History 4
 0,0,0
-65,72,255
-255,17,4
+204,204,204
+255,255,255
 
 ROOM 0
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -86,7 +104,7 @@ b,b,0,0,d,d,0,0,0,0,0,0,0,0,0,0
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,b,0,0,b,b,b,b,b,b,b,b,b,b,b
 b,b,b,0,0,b,b,b,b,b,b,b,b,b,b,b
-NAME Past Start
+NAME History 0 - Meeting
 EXT 0,3 4 10,9
 EXT 0,4 4 10,9
 EXT 3,15 4 10,9
@@ -114,7 +132,7 @@ b,0,c,0,0,0,0,0,c,0,0,0,0,0,0,b
 b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
 b,0,0,0,0,0,0,0,0,0,0,0,0,0,0,b
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
-NAME Future Start
+NAME Future 0 - Bar
 ITM 0 8,3
 ITM 0 8,11
 ITM 0 3,1
@@ -141,7 +159,7 @@ ROOM 3
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-NAME Now Start
+NAME Present 0
 PAL 3
 
 ROOM 4
@@ -169,9 +187,9 @@ PAL 4
 ROOM 5
 a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
 a,16,17,0,16,17,0,a,a,a,a,a,a,a,a,a
-a,15,15,15,15,15,15,a,a,a,0,0,0,a,a,a
-a,14,14,14,14,14,14,a,a,a,0,18,19,a,a,a
-a,0,16,17,0,16,17,a,a,a,0,0,0,a,a,a
+a,15,15,15,15,15,15,a,a,a,a,a,a,a,a,a
+a,14,14,14,14,14,14,a,a,a,a,18,19,a,a,a
+a,0,16,17,0,16,17,a,a,a,a,a,a,a,a,a
 a,0,0,0,0,0,0,a,a,a,a,a,a,a,a,a
 a,13,13,13,13,13,13,a,a,a,a,a,a,a,a,a
 a,b,1a,1a,b,12,b,a,a,a,a,a,a,a,a,a
@@ -185,7 +203,7 @@ a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 a,0,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 NAME History 2 - Crisis
 EXT 1,15 7 12,2
-PAL 4
+PAL 5
 
 ROOM 6
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -209,7 +227,7 @@ ITM 1 12,2
 ITM 1 4,2
 ITM 1 8,2
 EXT 11,6 0 7,7
-PAL 4
+PAL 7
 
 ROOM 7
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -245,7 +263,7 @@ EXT 10,10 6 6,2
 EXT 11,10 6 6,2
 EXT 12,10 6 6,2
 EXT 13,10 6 6,2
-PAL 4
+PAL 6
 
 TIL 10
 00011000
@@ -709,9 +727,9 @@ TIL 1h
 NAME Walking Path 4
 
 TIL 1i
-11111111
 10100101
 11111111
+10100101
 10100101
 11111111
 10100101
@@ -834,7 +852,7 @@ SPR A
 00111100
 00100100
 00000100
-POS 6 6,4
+POS 6 6,2
 
 SPR a
 00011000
@@ -1038,7 +1056,7 @@ SPR u
 00100100
 NAME R?
 DLG SPR_e
-POS 6 5,2
+POS 6 4,3
 
 ITM 0
 00011000
@@ -1213,12 +1231,19 @@ R took a shot of whiskey.
 
 DLG SPR_b
 """
-{sequence
-  - C: Hey R. You're my best friend.
-  - C: But you know L?
-  - C: L and I are more than friends.
-  - C: Like... Friends++. {H4 = 1}
-  - C is passed out drunk.
+{
+  - H42 == 0 ?
+    C: Hey R. You're my best friend, but...
+  - H42 == 1 ?
+    C: R, you just want to get in my pants.{H4 = 1}
+  - H42 == 2 ?
+    C: You know L?{H4 = 2}
+  - H42 == 3 ?
+    C: L and I are more than friends.{H4 = 3}
+  - H42 == 4 ?
+    C: Like... Friends++.{H4 = 4}
+  - H42 == 5 ?
+    C is passed out drunk.{H4 = 5}
 }
 """
 
@@ -1244,7 +1269,7 @@ DLG SPR_c
   - {item "Whiskey"} == 2 ?
     L: What? Why do you want to die?
   - {item "Whiskey"} == 3 ?
-    L: Hey, take it easy. I think you should go home.
+    L: Dude, you couldn't take me in a fight. You should go home.
     L: I called you a cab.
     
     L: You can leave through the side gate.
@@ -1274,13 +1299,26 @@ DLG SPR_e
 """
 {
   - H4 == 1 ?
-    R: I thought I was your best friend...
-  - else ?
+    R: That's partially true, but I care about you, C.{H42 = 2}
+  - H4 == 2 ?
+    R: Who is L? You've never mentioned him before.{H42 = 3}
+  - H4 == 3 ?
+    R: More than friends? What does that mean?{H42 = 4}
+  - H4 == 4 ?
+    R: Friends++? Friends with benefits?{H42 = 5}
+  - H4 == 5 ?
+    R: So this is what she really thinks about me...
     R: I'm... breaking...
+  - H4 == 0 ?
+    R: You called me... You said you didn't want to be alone...
+    R: Who is he?{H42 = 1}
 }
 """
 
 VAR H4
+0
+
+VAR H42
 0
 
 
