Fixes to history route

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -15,7 +15,7 @@ The Present
 
 PAL 0
 NAME Beginning
-68,68,68
+0,0,0
 255,255,255
 255,255,0
 
@@ -852,7 +852,7 @@ SPR A
 00111100
 00100100
 00000100
-POS 6 6,2
+POS 0 7,7
 
 SPR a
 00011000
@@ -1177,7 +1177,7 @@ DLG ITM_0
 DLG SPR_9
 """
 {sequence
-  - C: {wvy}RRRRRRRRRRRR~{wvy} What's up?
+  - C: {wvy}RRRRRRRRRRRR{wvy} What's up?
     
     R: Thumbs.
     
