More fixes to History route

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -1177,7 +1177,7 @@ DLG ITM_0
 DLG SPR_9
 """
 {sequence
-  - C: {wvy}RRRRRRRRRRRR{wvy} What's up?
+  - C: {wvy}RRRRRRRRRRRR{wvy}, What's up?
     
     R: Thumbs.
     
@@ -1188,7 +1188,7 @@ DLG SPR_9
   - C: Are you a romantic, R? Really? Me too!
   - C: Do you have a type? Oooooh.
   - C: Me? I like a guy who makes me a better person.
-  - C: Look at those couples, R. {wvy}Holding hands being mushy~{wvy}
+  - C: Look at those couples, R. {wvy}Holding hands being mushy{wvy}.
   - C: Movie's over, let's go.
 }
 """
